# hayai

./: Cargo.toml  README.md
benches/: bench.rs
examples/: fibonacci.rs
src/: bin.rs  lib.rs  vm.rs
src/vm/: instruction.rs  metadata.rs  pod.rs  stack.rs
src/vm/instruction/: metadata.rs
src/vm/stack/: pod.rs
